# py_process

./: .gitignore  LICENSE-COMMERCIAL.txt  LICENSE-MIT.txt  README.md  dynamic_import.py  index.py  package.json  process_api.ipynb  pyproject.toml  requirements.txt  setup.py  web_api.py
action_systems/: console_actions.py
data/: recording_simple_click.json  recording_simple_type_text.json
docs/: build.md
notebooks/: add_modules.ipynb  ai_actions.ipynb  condition_actions.ipynb  console_actions.ipynb  data_actions.ipynb  get_and_set_values.ipynb  loop.ipynb  process_call.ipynb  selenium-firefox.ipynb  selenium.ipynb  switch_actions.py.ipynb  system.ipynb  templates.ipynb  test.ipynb  text_classification_actions.ipynb
notebooks/ai/: chroma.ipynb  gpt_neo.ipynb  mistral.ipynb  notes.ipynb
notebooks/default_actions/: condition_actions.ipynb  console_actions.ipynb  get_and_set_values.ipynb  loop_actions.ipynb  switch_actions.py.ipynb
notebooks/interpreter/: interpreter.ipynb
notebooks/schemas/: console.ipynb  data.ipynb  sequence.json  ui-testing.ipynb
notebooks/selenium/: chrome.ipynb  designer-shadowdom.ipynb  drag-and-drop.ipynb  firefox.ipynb  perform.ipynb  selenium-chrome.ipynb  selenium-designer.ipynb  selenium-firefox.ipynb  wait.ipynb
process_api/: __init__.py  process_logger.py  process_runner.py
src/: process_api.py  process_runner.py
template_examples/: dynamic_console.json
tests/: test_index.py  test_process_api.py  test_process_runner.py
utils/: get_value.py  set_value.py
web/: dialog.html  frame.html  index.html
(+114 files in other folders)
