[project]
name = "process_api"
version = "0.0.1"
authors = [
  { name="caperaven", email="caperaven@caperaven.co.za" },
]
description = "A extendable library that enables intent driven development by allowing code and json execution of development intent"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dynamic]
license = 'MIT OR Commercial'

[project.urls]
"Homepage" = "https://github.com/caperaven/py_process"
"Bug Tracker" = "https://github.com/caperaven/py_process/issues"
